Added the posibility to draw the sensor data plots

--- a/config.ini
+++ b/config.ini
@@ -7,4 +7,8 @@ logStartRowN                   = 14           % The row number where the log's h
 
 
 [debug]
-showDebugInfo                  = true       % bool, turn on/off the debug info
+showDebugInfo                  = true         % bool, turn on/off the debug info
+
+
+[visualize]
+rawSensorPlots                 = false         % bool, depict the input Acc, Gyro signals
