Added the possibility to depict the raw GSP data signals

--- a/config.ini
+++ b/config.ini
@@ -12,3 +12,4 @@ showDebugInfo                  = true         % bool, turn on/off the debug info
 
 [visualize]
 rawSensorPlots                 = false         % bool, depict the input Acc, Gyro signals
+rawGPSDataPlots                = false         % bool, depict the input GPS signals
